--- a/graphics_lobby/mainwindow.ui
+++ b/graphics_lobby/mainwindow.ui
@@ -17,7 +17,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-image: url(:lobby_background.jpg);</string>
+   <string notr="true">background-image: url(:background.jpg);</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
@@ -32,8 +32,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>350</y>
+      <x>80</x>
+      <y>590</y>
       <width>200</width>
       <height>41</height>
      </rect>
@@ -82,8 +82,8 @@ QPushButton:hover {
     </property>
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>470</y>
+      <x>500</x>
+      <y>590</y>
       <width>200</width>
       <height>41</height>
      </rect>
@@ -129,7 +129,7 @@ QPushButton:hover {
     </property>
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>960</x>
       <y>590</y>
       <width>200</width>
       <height>41</height>
@@ -218,7 +218,7 @@ QPushButton:hover {
     <property name="geometry">
      <rect>
       <x>450</x>
-      <y>360</y>
+      <y>540</y>
       <width>600</width>
       <height>50</height>
      </rect>
