--- a/graphics_lobby/joinpopup.ui
+++ b/graphics_lobby/joinpopup.ui
@@ -67,6 +67,22 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="selectGusano">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(157, 157, 157);</string>
+       </property>
+       <property name="text">
+        <string>SELECCIONAR GUSANO</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
  <resources/>
  <connections/>
 </ui>
