pantalla de inicio

--- a/graphics_lobby/assets/resources.qrc
+++ b/graphics_lobby/assets/resources.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>AmazMegaGrungeOne.ttf</file>
+        <file>GROBOLD.ttf</file>
         <file>lobby_background.jpg</file>
         <file>BackgroundPopUp.jpg</file>
     </qresource>
