--- a/graphics_lobby/mainwindow.ui
+++ b/graphics_lobby/mainwindow.ui
@@ -217,8 +217,8 @@ QPushButton:hover {
     </property>
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>540</y>
+      <x>510</x>
+      <y>530</y>
       <width>600</width>
       <height>50</height>
      </rect>
@@ -229,7 +229,7 @@ background: none;
 color : rgb(255,255,255);</string>
     </property>
     <property name="text">
-     <string>YA SE ENCUENTRA EN UNA PARTIDA</string>
+     <string>2 JUGADORES EPERANDO</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
