--- a/graphics_lobby/waitRoom.ui
+++ b/graphics_lobby/waitRoom.ui
@@ -35,7 +35,7 @@
      <item>
       <widget class="QPushButton" name="start">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
