--- a/graphics_lobby/mainwindow.ui
+++ b/graphics_lobby/mainwindow.ui
@@ -17,7 +17,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-image: url(:background.jpg);</string>
+   <string notr="true">background-image: url(:lobby_background.jpg);</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
@@ -33,14 +33,14 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>590</y>
-      <width>200</width>
+      <y>520</y>
+      <width>300</width>
       <height>41</height>
      </rect>
     </property>
     <property name="maximumSize">
      <size>
-      <width>200</width>
+      <width>400</width>
       <height>50</height>
      </size>
     </property>
@@ -83,7 +83,7 @@ QPushButton:hover {
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>590</y>
+      <y>520</y>
       <width>200</width>
       <height>41</height>
      </rect>
@@ -130,7 +130,7 @@ QPushButton:hover {
     <property name="geometry">
      <rect>
       <x>960</x>
-      <y>590</y>
+      <y>520</y>
       <width>200</width>
       <height>41</height>
      </rect>
@@ -168,71 +168,6 @@ QPushButton:hover {
       <width>32</width>
       <height>32</height>
      </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="startButton">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>650</y>
-      <width>361</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>500</width>
-      <height>100</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>28</pointsize>
-     </font>
-    </property>
-    <property name="mouseTracking">
-     <bool>true</bool>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-    border: none;
-    background: none;
-	color: rgb(157, 157, 157);
-}
-
-QPushButton:hover {
-	color: rgb(176, 10, 10)
-}</string>
-    </property>
-    <property name="text">
-     <string>START</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="labelMatch">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>510</x>
-      <y>530</y>
-      <width>600</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border: none;
-background: none;
-color : rgb(255,255,255);</string>
-    </property>
-    <property name="text">
-     <string>2 JUGADORES EPERANDO</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
   </widget>
