--- a/graphics_lobby/createpopup.ui
+++ b/graphics_lobby/createpopup.ui
@@ -22,15 +22,27 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QLabel" name="labelScenarios">
+        <widget class="QLabel" name="labelMap">
          <property name="enabled">
           <bool>true</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>250</width>
+           <height>16777215</height>
+          </size>
          </property>
          <property name="styleSheet">
           <string notr="true">color: rgb(255, 255, 255);</string>
          </property>
          <property name="text">
-          <string>Seleccione el escenario:</string>
+          <string>Seleccione el mapa:</string>
          </property>
         </widget>
        </item>
@@ -41,23 +53,13 @@
          </property>
          <property name="maximumSize">
           <size>
-           <width>100</width>
+           <width>200</width>
            <height>16777215</height>
           </size>
          </property>
          <property name="styleSheet">
           <string notr="true">background-image: url(:BackgroundPopUp.jpg);</string>
          </property>
-         <item>
-          <property name="text">
-           <string>Alta mar</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Montañas</string>
-          </property>
-         </item>
         </widget>
        </item>
       </layout>
